<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <androidx.constraintlayout.widget.ConstraintLayout
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:background="@drawable/dialog_back"
       android:layout_width="@dimen/_260sdp"
       android:layout_height="wrap_content">
       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/cons_camera"
                   app:layout_constraintTop_toTopOf="parent"
                   android:layout_marginTop="@dimen/_15sdp"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintHorizontal_bias="0.18"
                   app:layout_constraintVertical_bias="0.4"
                   android:layout_width="@dimen/_80sdp"
                   android:layout_height="@dimen/_70sdp">
                   <ImageView
                       android:id="@+id/camera"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintVertical_bias="0.3"
                       app:layout_constraintHorizontal_bias="0.5"
                       android:src="@drawable/ic_baseline_camera_alt_24"
                       android:layout_width="@dimen/_30sdp"
                       android:layout_height="@dimen/_30sdp"/>
                   <TextView
                       app:layout_constraintTop_toBottomOf="@id/camera"
                       app:layout_constraintLeft_toLeftOf="@id/camera"
                       app:layout_constraintRight_toRightOf="@id/camera"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintVertical_bias="0.2"
                       android:textColor="@color/textColor"
                       android:textStyle="normal"
                       android:textSize="@dimen/_12sdp"
                       android:text="@string/camera"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
               </androidx.constraintlayout.widget.ConstraintLayout>
               <androidx.constraintlayout.widget.ConstraintLayout
                   android:id="@+id/cons_gallery"
                   app:layout_constraintTop_toTopOf="@id/cons_camera"
                   app:layout_constraintBottom_toBottomOf="@id/cons_camera"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintHorizontal_bias="0.82"
                   app:layout_constraintVertical_bias="0.5"
                   android:layout_width="@dimen/_80sdp"
                   android:layout_height="@dimen/_70sdp">
                   <ImageView
                       android:id="@+id/gallery"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintRight_toRightOf="parent"
                       app:layout_constraintVertical_bias="0.3"
                       app:layout_constraintHorizontal_bias="0.5"
                       android:src="@drawable/ic_baseline_image_24"
                       android:layout_width="@dimen/_30sdp"
                       android:layout_height="@dimen/_30sdp"/>
                   <TextView
                       app:layout_constraintTop_toBottomOf="@id/gallery"
                       app:layout_constraintLeft_toLeftOf="@id/gallery"
                       app:layout_constraintRight_toRightOf="@id/gallery"
                       app:layout_constraintBottom_toBottomOf="parent"
                       app:layout_constraintVertical_bias="0.2"
                       android:textColor="@color/textColor"
                       android:textStyle="normal"
                       android:textSize="@dimen/_12sdp"
                       android:text="@string/gallery"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"/>
               </androidx.constraintlayout.widget.ConstraintLayout>
               <RadioGroup
                   android:id="@+id/radio_group"
                   android:gravity="center"
                   app:layout_constraintTop_toBottomOf="@id/cons_camera"
                   app:layout_constraintLeft_toLeftOf="@id/cons_camera"
                   app:layout_constraintRight_toRightOf="@id/cons_gallery"
                   android:layout_width="match_parent"
                   android:orientation="vertical"
                   android:layout_marginHorizontal="@dimen/_10sdp"
                   android:layout_height="wrap_content">
                   <RadioButton
                       android:id="@+id/passport"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1"
                       android:text="@string/passport"
                       android:buttonTint="@color/red_color"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:id="@+id/card"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1.35"
                       android:buttonTint="@color/red_color"
                       android:text="@string/card"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:buttonTint="@color/red_color"
                       android:id="@+id/selfie"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1"
                       android:text="@string/selfie"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:buttonTint="@color/red_color"
                       android:id="@+id/contract"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1.35"
                       android:text="@string/treaty"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:buttonTint="@color/red_color"
                       android:id="@+id/product"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1"
                       android:text="@string/product"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:buttonTint="@color/red_color"
                       android:id="@+id/signature"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:layout_weight="1.35"
                       android:text="@string/signature"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>
                   <RadioButton
                       android:buttonTint="@color/red_color"
                       android:id="@+id/other"
                       style="@android:style/Widget.CompoundButton.CheckBox"
                       android:text="@string/other"
                       android:gravity="left|center"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"/>

               </RadioGroup>

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/close"
                   android:padding="@dimen/_5sdp"
                   android:textAllCaps="false"
                   app:layout_constraintHorizontal_bias="0.95"
                   android:textSize="@dimen/_12sdp"
                   android:text="@string/cancel"
                   android:textColor="@color/white"
                   app:layout_constraintTop_toBottomOf="@id/radio_group"
                   android:layout_marginTop="@dimen/_10sdp"
                   android:layout_marginBottom="@dimen/_10sdp"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   android:layout_marginHorizontal="@dimen/_10sdp"
                   android:background="@drawable/delete_back"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:layout_width="0dp"
                   android:layout_height="@dimen/_30sdp"/>
           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.core.widget.NestedScrollView>
   </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>