<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pages.user_data.UserFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationLottie"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/information"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>
    <EditText
        android:id="@+id/order_number"
        android:inputType="text"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:hint="@string/order_number"
        app:layout_constraintTop_toBottomOf="@id/animationLottie"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_7sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_marginTop="@dimen/_10sdp"
        android:id="@+id/pinfl"
        android:inputType="number"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:maxLength="14"
        android:hint="@string/pinfl"
        app:layout_constraintTop_toBottomOf="@id/order_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_7sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:enabled="false"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/pinfl"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:text="@string/save"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_normal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_33sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>