<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_back"
        android:layout_width="@dimen/_270sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationLottie"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:lottie_rawRes="@raw/delete_lott"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <TextView
            android:id="@+id/text_title"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/delete_text"
            app:layout_constraintTop_toBottomOf="@id/animationLottie"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.85"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            app:layout_constraintTop_toBottomOf="@id/text_title"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_no_delete"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textAllCaps="false"
                android:text="@string/cancel"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                android:background="@drawable/button_normal"
                android:layout_margin="@dimen/_4sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_delete"
                android:layout_weight="1"
                android:textSize="@dimen/_11sdp"
                android:textAllCaps="false"
                android:text="@string/delete"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_medium"
                android:layout_margin="@dimen/_4sdp"
                android:background="@drawable/delete_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>