<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.pages.settings.SettingsFragment">
    <TextView
        android:id="@+id/settings_tv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.05"
        android:textStyle="bold"
        android:textSize="@dimen/_20sdp"
        android:textColor="@color/textColor"
        android:fontFamily="@font/inter_black"
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/settings_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:hint="Логин"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password"
        app:layout_constraintTop_toBottomOf="@id/login"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:hint="@string/password"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/order_number"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:inputType="text"
        app:layout_constraintWidth_percent="0.95"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:hint="@string/order_number"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/pinfl"
        app:layout_constraintTop_toBottomOf="@id/order_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:inputType="number"
        android:background="@drawable/back_edite_text"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:maxLength="14"
        android:hint="@string/pinfl"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_12sdp"
        android:textStyle="normal"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update"
        app:layout_constraintTop_toBottomOf="@id/pinfl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/button_normal"
        android:text="Изменять"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:enabled="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout"
        app:layout_constraintTop_toBottomOf="@id/update"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.95"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/button_normal"
        android:text="Выйти из аккаунта"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:textStyle="normal"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>